[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_right = 147.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -107.0
margin_right = 261.5
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "Desvie dos monstrengos!"
align = 1
valign = 1
autowrap = true

[node name="StartBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_top = -69.0
margin_right = 103.5
custom_fonts/font = SubResource( 2 )
text = "COMEÃ‡AR"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="StartBtn" to="." method="start_game_action"]
[connection signal="timeout" from="MessageTimer" to="." method="hide_message"]
